RESOLVED FIXED65641
JSC GC heap size improvement breaks build on some platforms due to unused parameter
https://bugs.webkit.org/show_bug.cgi?id=65641
Summary JSC GC heap size improvement breaks build on some platforms due to unused par...
Filip Pizlo
Reported 2011-08-03 14:07:10 PDT
The JSC GC heapSizeForHint() internal function does not use the heapSize parameter if !ENABLE(LARGE_HEAP), causing an unused parameter warning.
Attachments
the patch (1.24 KB, patch)
2011-08-03 14:15 PDT, Filip Pizlo
darin: review+
the patch (1.53 KB, patch)
2011-08-03 16:07 PDT, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2011-08-03 14:15:43 PDT
Created attachment 102824 [details] the patch Tests still running. Will set r=? when they finish.
Filip Pizlo
Comment 2 2011-08-03 14:31:18 PDT
Comment on attachment 102824 [details] the patch Tests pass, ready for review.
Darin Adler
Comment 3 2011-08-03 14:37:44 PDT
Comment on attachment 102824 [details] the patch View in context: https://bugs.webkit.org/attachment.cgi?id=102824&action=review > Source/JavaScriptCore/heap/Heap.cpp:51 > + ASSERT_UNUSED(heapSize, heapSize == LargeHeap || heapSize == SmallHeap); Using ASSERT_UNUSED with an argument that actually is used might cause problems in the future even if it doesn’t right now. It would be better to structure the ifdefs so the ASSERT_UNUSED is inside the #else.
Filip Pizlo
Comment 4 2011-08-03 16:07:44 PDT
Created attachment 102847 [details] the patch
WebKit Review Bot
Comment 5 2011-08-03 16:08:26 PDT
Comment on attachment 102847 [details] the patch Rejecting attachment 102847 [details] from commit-queue. fpizlo@apple.com does not have committer permissions according to http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py. - If you do not have committer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
WebKit Review Bot
Comment 6 2011-08-03 16:35:16 PDT
Comment on attachment 102847 [details] the patch Clearing flags on attachment: 102847 Committed r92329: <http://trac.webkit.org/changeset/92329>
WebKit Review Bot
Comment 7 2011-08-03 16:35:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.