JSC GC heap size improvement breaks build on some platforms due to unused parameter https://bugs.webkit.org/show_bug.cgi?id=65641

Reviewed by Darin Adler.

Fix build on non-x86 platforms, by ensuring that the relevant
parameter always appears to be used even when it isn't.

* heap/Heap.cpp:


Canonical link: https://commits.webkit.org/81457@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92329 268f45cc-cd09-0410-ab3c-d52691b4dbfc